--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.8.4",
-    "chalk": "^3.0.0"
+    "chalk": "^3.0.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
     "@types/jest": "^25.1.2",
-    "jest": "^25.1.0"
+    "babel-jest": "^25.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "jest": "^25.1.0",
+    "react-test-renderer": "^16.12.0"
   }
 }
